--- a/index.html
+++ b/index.html
@@ -3,20 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="dom.js"></script>
+    <script src="dom.js"></script>
     <title>Count It</title>
+    <link rel="stylesheet" type= "text/css" href="/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <head>Count It</head>
-    </header>
     <main>
-        <h3>Give it a Try</h3>
-        <textarea type="text" name="input" id="input"></textarea>
+    <div id= "header">Count It
+    <h2>Give it a try!</h2>
+    <h3>Enter text below:</h3>
+        
+    <textarea type="text" name="input" id="input"></textarea>
         <div id = "button">
             <button id= "button" onclick = "countIt()">COUNT IT!</button>
         </div>
-        <div id= "finial"></div>
+        <div id= "final"></div>
+        <div id= "converted"></div>
+        </div>
+        </div>
     </main>
 </body>
 </html>
